# LaFontaine

./: .pre-commit-config.yaml  LICENSE  README.md  WORKLOG
client/: package-lock.json
client/lafontaine-client/: package-lock.json  package.json
client/lafontaine-client/src/: App.css  App.js  DragDrop.js
server/: Dockerfile  app.yaml  builder.Dockerfile  main.py  pyproject.toml  requirements.txt
