[tool.poetry]
name = "lafontaine"
version = "0.1.0"
description = ""
authors = ["Madelaine Boyd <madelaine.boyd+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai2 = "^1.6.5"
python-docx = "^1.1.0"
python-magic = "^0.4.27"
boto3 = "^1.34.7"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"


[tool.pdm]
package-type = "application"

[project]
name = "server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Madelaine Boyd", email = "madelaine.boyd+github@gmail.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "boto3",
    "python-docx",
    "python-magic",
    "python-multipart",
    "python-dotenv>=1.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

